--- a/ES-exercise/ES8/2-await.html
+++ b/ES-exercise/ES8/2-await.html
@@ -22,6 +22,7 @@
                 //
                 console.log(result);
             } catch (e) {
+                console.log(this);
                 console.log(e);
             }
         }
