--- a/ES-exercise/ES8/4-async与await封装AJAX请求.html
+++ b/ES-exercise/ES8/4-async与await封装AJAX请求.html
@@ -46,9 +46,10 @@
             //发送 AJAX 请求
             let result = await sendAJAX("https://api.apiopen.top/getJoke");
             //再次测试
-            let tianqi = await sendAJAX('https://www.tianqiapi.com/api/?version=v1&city=%E5%8C%97%E4%BA%AC&appid=23941491&appsecret=TXoD5e8P')
+            let weather = await sendAJAX('https://www.tianqiapi.com/api/?version=v1&city=%E5%8C%97%E4%BA%AC&appid=23941491&appsecret=TXoD5e8P')
 
-            console.log(tianqi);
+            console.log(result);
+            console.log(weather);
         }
 
         main();
