--- a/React-exercise/react_basic/08_组件实例三大属性3_refs/4_createRef的使用.html
+++ b/React-exercise/react_basic/08_组件实例三大属性3_refs/4_createRef的使用.html
@@ -36,6 +36,8 @@
 					<div>
 						<input ref={this.myRef} type="text" placeholder="点击按钮提示数据"/>&nbsp;
 						<button onClick={this.showData}>点我提示左侧的数据</button>&nbsp;
+						{/*这个会覆盖之前的ref*/}
+						{/*<input onBlur={this.showData2} ref={this.myRef} type="text" placeholder="失去焦点提示数据"/>&nbsp;*/}
 						<input onBlur={this.showData2} ref={this.myRef2} type="text" placeholder="失去焦点提示数据"/>&nbsp;
 					</div>
 				)
