--- a/React-exercise/react_basic/11_高阶函数_函数柯里化/2_不用函数柯里化的实现.html
+++ b/React-exercise/react_basic/11_高阶函数_函数柯里化/2_不用函数柯里化的实现.html
@@ -38,6 +38,15 @@
 			render(){
 				return(
 					<form onSubmit={this.handleSubmit}>
+						{/*
+						原来模样（柯里化）:
+						用户名：<input onChange={this.saveFormData('username')} type="text" name="username"/>
+						react调用一下方法
+						用户名：<input onChange={ ()=>{} } type="text" name="username"/>
+						加入event
+						用户名：<input onChange={ (event)=>{this.saveFormData('username', event)} } type="text" name="username"/>
+						简化好精简后：
+						*/}
 						用户名：<input onChange={event => this.saveFormData('username',event) } type="text" name="username"/>
 						密码：<input onChange={event => this.saveFormData('password',event) } type="password" name="password"/>
 						<button>登录</button>
